# sisyphus

./: Cargo.toml
examples/: summary_scai.json  summary_scai.schema.json
src/: lib.rs
src/cbp/: manager.rs
src/controlplane/: controlplane.rs  mod.rs
src/models/: attestation.rs  events.rs  mod.rs  policy.rs  summary_scai.rs
src/storage/: attestation_storage.rs  mod.rs  policy_repository.rs
src/verification/: mod.rs  policy_verifier.rs
