[package]
name = "sisyphus"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
chrono = { version = "0.4.38", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
